# gemini-vision-app

./: README.md  pyproject.toml
src/gemini_vision/: __main__.py  app.py
