[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gemini-vision-assistant"
version = "0.0.1"
authors = [
  { name="Kyunghyun Cho", email="kyunghyun.cho@nyu.edu" },
]
description = "A macOS utility to capture a window and ask Gemini questions about it."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
]
dependencies = [
    "google-generativeai",
    "Pillow",
    "markdown2",
    "tkhtmlview",
]

[project.scripts]
gemini-vision = "gemini_vision.__main__:main"